--- a/game-scenarios-byzantine-agreement.ipynb
+++ b/game-scenarios-byzantine-agreement.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bizantine Agreement in the Case of 4 Generals Coping with 2 Traitors:\n",
+    "## Byzantine Agreement in the Case of 4 Generals Coping with 2 Traitors:\n",
     "## *A Quantum Solution*\n",
     "\n",
     "To understand how the agreement is reached, consider an ideal system where, at this point, the lists of integers are:\n",
@@ -105,8 +105,7 @@
     "\n",
     "Bob vs. Carol:\n",
     "![lists4G5.png](attachment:lists4G5.png)\n",
-    "\n",
-    "                Bob and Dave are traitors. \n",
+    "\n"
     "                Bob succeeds 11 times (highlighted in green) and fails 5 times (highlighted in purple) against Carol.\n",
     " \n",
     "Carol vs. Dave:\n",
