--- a/game-scenarios-byzantine-agreement.ipynb
+++ b/game-scenarios-byzantine-agreement.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bizantine Agreement in the Case of 4 Generals Coping with 2 Traitors:\n",
+    "## Byzantine Agreement in the Case of 4 Generals Coping with 2 Traitors:\n",
     "## *A Quantum Solution*\n",
     "\n",
     "To understand how the agreement is reached, consider an ideal system where, at this point, the lists of integers are:\n",
