--- a/byzantine-agreement.ipynb
+++ b/byzantine-agreement.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "In case of three generals:\n",
     "\n",
-    "$$ \\frac{1}{2\\;\\sqrt3}\\; (\\;2\\;|0011\\rangle - |0101\\rangle + |0110\\rangle + |1001\\rangle +  |1010\\rangle + 2\\;|1100\\rangle\\;) $$\n",
+    "$$ \\frac{1}{2\\;\\sqrt3}\\; (\\;2\\;|0011\\rangle - |0101\\rangle - |0110\\rangle - |1001\\rangle -  |1010\\rangle + 2\\;|1100\\rangle\\;) $$\n",
     "\n",
     "\n",
     "In case of four generals:\n",
