--- a/hardware-demo-four-generals.ipynb
+++ b/hardware-demo-four-generals.ipynb
@@ -985,7 +985,7 @@
     "                        p_no = hpg_pmf(M_no, n_no, N_hg, x_hg)\n",
     "                        pi_tr = L1['pi_t']\n",
     "                        # Bayes formula:\n",
-    "                        p_post_tr = p_tr * p_tr / (pi_tr * p_tr + pi_no * p_no) \n",
+    "                        p_post_tr = pi_tr * p_tr / (pi_tr * p_tr + pi_no * p_no) \n",
     "                        caution = p_post_tr >= .5                        \n",
     "                        \n",
     "                    else:\n",
